--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,11 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-  height: auto;
-  overflow-y: scroll;
+  height: 100%;
+  overflow: auto;
 }
 
 .scrollable-container {
@@ -75,4 +75,4 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
